# libkperf

./: .gitignore  CMakeLists.txt  CmakePresets.json  README.md
cmake/: ios.toolchain.cmake
include/kperf/: kdebug.h  kperf.h
src/: kperf.c
tests/: CMakeLists.txt  burn_cpu_pi.c  grap_event.c  ios.xcent  perf_func.c  perf_process.c  perf_process_pmi.c  read_pmi.c
